--- a/po/pl.po
+++ b/po/pl.po
@@ -14,7 +14,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-03-07 22:00+0000\n"
+"X-Launchpad-Export-Date: 2009-06-01 21:20+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../src/output.c:110
@@ -73,15 +73,12 @@ msgid "ralcalc  version %s (build date: %s)\n"
 msgstr "ralcalc wersja %s (data kompilacji: %s)\n"
 
 #: ../src/ralcalc.c:56
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Copyright (C) 2007-2009 Roger Light\n"
 "http://atchoo.org/tools/ralcalc/\n"
 "\n"
 msgstr ""
-"Copyright (C) 2007,2008 Roger Light\n"
-"http://atchoo.org/tools/ralcalc/\n"
-"\n"
 
 #: ../src/ralcalc.c:57
 #, c-format
