--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+1.3.1.3 (20090601)
+==================
+
+- Complete Danish translations (both program and man page) thanks to Jimmy
+  Frydkær Jensen
+- Partial Czech translations of ralcalc by DrakecZ.
+
+
 1.3.1.2 (20090307)
 ==================
 
