--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1.3.1.4 (20090602)
+==================
+
+- Fix typo in Makefile causing translated man pages to not be installed.
+
+
 1.3.1.3 (20090601)
 ==================
 
