--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,9 @@
 1.3.2 (20090619)
 ================
 
-- Don't allow equations to start with +*/%.
+- Don't allow equations to start with any of +*/%.
+- Completed Spanish translations of program and man page thanks to navnelson.
+- Partial Portuguese translations of the man page thanks to Tiago Silva.
 
 
 1.3.1.4 (20090602)
