--- a/po/es.po
+++ b/po/es.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: ralcalc\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-07 22:44+0000\n"
-"PO-Revision-Date: 2009-02-19 23:47+0000\n"
-"Last-Translator: Feder Sáiz <federsaiz@googlemail.com>\n"
+"PO-Revision-Date: 2009-06-08 22:13+0000\n"
+"Last-Translator: navnelson <navnelson7@gmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-06-01 21:20+0000\n"
+"X-Launchpad-Export-Date: 2009-06-22 22:44+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../src/output.c:110
@@ -79,6 +79,8 @@ msgid ""
 "http://atchoo.org/tools/ralcalc/\n"
 "\n"
 msgstr ""
+"Derechos Reservados(R) 2007-2009 Roger Light\n"
+"\n"
 
 #: ../src/ralcalc.c:57
 #, c-format
@@ -110,7 +112,7 @@ msgstr "Uso: ralcalc -h (muestra este mensaje)\n"
 #: ../src/ralcalc.c:60
 #, c-format
 msgid "       ralcalc -a   (display all available operators)\n"
-msgstr ""
+msgstr "       ralcalc -a (mostrar todos los operadores)\n"
 
 #: ../src/ralcalc.c:61
 #, c-format
@@ -165,37 +167,37 @@ msgstr ""
 #: ../src/ralcalc.c:79
 #, c-format
 msgid "Numbers:\n"
-msgstr ""
+msgstr "Números:\n"
 
 #: ../src/ralcalc.c:80
 #, c-format
 msgid "  1.0    : example number\n"
-msgstr ""
+msgstr "  1.0: Ejemplo de números\n"
 
 #: ../src/ralcalc.c:81
 #, c-format
 msgid "  1.0e-3 : example number\n"
-msgstr ""
+msgstr "  1.0e-3 : Ejemplo de número\n"
 
 #: ../src/ralcalc.c:82
 #, c-format
 msgid "  1.0m   : example number\n"
-msgstr ""
+msgstr "  1.0m : Ejemplo de número\n"
 
 #: ../src/ralcalc.c:83
 #, c-format
 msgid "  _      : previous result\n"
-msgstr ""
+msgstr "  _: Resultado previo\n"
 
 #: ../src/ralcalc.c:84
 #, c-format
 msgid "  y, z, a, f, p, n, u, m : SI prefixes\n"
-msgstr ""
+msgstr "  y, z, a, f, p, n, u, m : SI prefijos\n"
 
 #: ../src/ralcalc.c:85
 #, c-format
 msgid "  k, M, G, T, P, E, Z, Y : SI prefixes\n"
-msgstr ""
+msgstr "  k, M, G, T, P, E, Z, Y : SI prefijos\n"
 
 #: ../src/ralcalc.c:86
 #, c-format
@@ -209,37 +211,37 @@ msgstr ""
 #: ../src/ralcalc.c:87
 #, c-format
 msgid "  +     : addition\n"
-msgstr ""
+msgstr "  +: adición\n"
 
 #: ../src/ralcalc.c:88
 #, c-format
 msgid "  -     : subtraction\n"
-msgstr ""
+msgstr "  -: resta\n"
 
 #: ../src/ralcalc.c:89
 #, c-format
 msgid "  * x   : multiplication\n"
-msgstr ""
+msgstr "  *x: multiplicación\n"
 
 #: ../src/ralcalc.c:90
 #, c-format
 msgid "  /     : division\n"
-msgstr ""
+msgstr "  /: división\n"
 
 #: ../src/ralcalc.c:91
 #, c-format
 msgid "  %%     : modulus\n"
-msgstr ""
+msgstr "  %%: módulo\n"
 
 #: ../src/ralcalc.c:92
 #, c-format
 msgid "  ^     : power\n"
-msgstr ""
+msgstr "  ^ : Potenciación\n"
 
 #: ../src/ralcalc.c:93
 #, c-format
 msgid "  () [] : brackets increase precedence\n"
-msgstr ""
+msgstr "  () [] : aumentar la preferencia entre paréntesis\n"
 
 #: ../src/ralcalc.c:94
 #, c-format
@@ -247,36 +249,38 @@ msgid ""
 "\n"
 "Functions:\n"
 msgstr ""
+"\n"
+"Funciones:\n"
 
 #: ../src/ralcalc.c:95
 #, c-format
 msgid "  log X         : logarithm to base 10 of X\n"
-msgstr ""
+msgstr "  log X : logaritmo base 10 de X\n"
 
 #: ../src/ralcalc.c:96
 #, c-format
 msgid "  ln X          : natural logarithm of X\n"
-msgstr ""
+msgstr "  in X : logartimos natural de X\n"
 
 #: ../src/ralcalc.c:97
 #, c-format
 msgid "  sin X, asin X : sine, arcsin of X\n"
-msgstr ""
+msgstr "  sin X, asin X : sine, arcsin de X\n"
 
 #: ../src/ralcalc.c:98
 #, c-format
 msgid "  cos X, acos X : cosine, arccos of X\n"
-msgstr ""
+msgstr "  cos X, acos X : cosine, arccos de X\n"
 
 #: ../src/ralcalc.c:99
 #, c-format
 msgid "  tan X, atan X : tangent, arctan of X\n"
-msgstr ""
+msgstr "  tan X, atan X : tangent, arctan de X\n"
 
 #: ../src/ralcalc.c:100
 #, c-format
 msgid "  sqrt X        : square root of X\n"
-msgstr ""
+msgstr "  sqrt X : raíz cuadrada de X\n"
 
 #: ../src/ralcalc.c:101
 #, c-format
@@ -284,16 +288,18 @@ msgid ""
 "\n"
 "Constants:\n"
 msgstr ""
+"\n"
+"Constantes:\n"
 
 #: ../src/ralcalc.c:102
 #, c-format
 msgid "  pi  : 3.14159\n"
-msgstr ""
+msgstr "  pi: 314159\n"
 
 #: ../src/ralcalc.c:103
 #, c-format
 msgid "  exp : 2.71828\n"
-msgstr ""
+msgstr "  exp: 271828\n"
 
 #: ../src/ralcalc.c:197 ../src/ralcalc.c:242
 #, c-format
@@ -303,7 +309,7 @@ msgstr "Error: Fuera de memoria\n"
 #: ../src/ralcalc.c:319 ../src/ralcalc.c:342
 #, c-format
 msgid "Error: Invalid SI prefix '%s' for '-s' option.\n"
-msgstr ""
+msgstr "Error: Prefijo SI invalido '%s' for '-s' opcion.\n"
 
 #: ../src/ralcalc.c:371
 #, c-format
